--- a/src/app/admin/view-users/view-users.component.html
+++ b/src/app/admin/view-users/view-users.component.html
@@ -36,4 +36,13 @@
             </tbody>
         </table>
     </div>
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class=" d-flex justify-content-center col-md-6">
+                <ngx-charts-advanced-pie-chart class="my-2 bg-transparent w-100 overflow-none" [results]="users" [scheme]="colorScheme" 
+                [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
+                </ngx-charts-advanced-pie-chart>
+            </div>
+        </div>
+    </div>
 </div>
