--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -116,7 +116,7 @@
   <div class="row mt-4 ">
     <div class="col-md-8"></div>
     <div class="col-md-4">
-      <div class="row reviews-container">
+      <div class="row reviews-container rounded-3">
         <div class="col-md-6 text-start">
           <p class="h5 fw-bolder mt-2">
             Reviews
