--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -1,5 +1,7 @@
-
-<div class="container">
+<div class="spinnerCustomStyle " *ngIf="!isLoaded">
+    <mat-spinner  ></mat-spinner>
+</div>
+<div class="container" *ngIf="isLoaded">
     <div class="row justify-content-center justify-content-md-between align-items-md-center">
         <section id="doctors" class="doctors col-10 col-md-5" *ngIf="isLoaded">
             <div class="row my-4   justify-content-center" >
@@ -7,8 +9,9 @@
                     <div class=" row align-items-start " >
                     <div class="member-info  col-8">
                         <h4>{{DoctorsInfo.name}}</h4>
-                        <span>Doctor specialized in {{DoctorsInfo.specification}}</span>
-                        <p>Rating section</p>
+                        <div>Doctor specialized in {{DoctorsInfo.specification}}
+                            <p><ngb-rating class="docrate" [max]="5" [readonly]="true" [rate]="5" ></ngb-rating></p>
+                        </div>
                         <p class="bi bi-geo-alt">{{DoctorsInfo.clinicAddress}}</p>
                         
                         <div >
