--- a/src/app/components/thankyou/thankyou.component.html
+++ b/src/app/components/thankyou/thankyou.component.html
@@ -1,4 +1,8 @@
-<div class="container">
+<div class="spinnerCustomStyle " *ngIf="!isLoaded">
+    <mat-spinner  ></mat-spinner>
+</div>
+
+<div class="container" *ngIf="isLoaded">
     <div class="row justify-content-center">
         <div class="card my-5 shadow-sm  mb-5 bg-body-tertiary rounded" style="width: 40rem; height: auto;">
             <div  style="position: relative;">
