--- a/src/app/components/about-doctor/about-doctor.component.html
+++ b/src/app/components/about-doctor/about-doctor.component.html
@@ -1,9 +1,9 @@
 
-<!-- <div class="spinnerCustomStyle " *ngIf="!isLoaded">
+<div class="spinnerCustomStyle " *ngIf="!isLoaded">
     <mat-spinner  ></mat-spinner>
-</div> -->
+</div>
 
-<section  id="doctors" class="doctors "  style="background-color: rgba(255, 255, 255, 0.79);">
+<section  id="doctors" class="doctors "  style="background-color: rgba(255, 255, 255, 0.79);" *ngIf="isLoaded">
 
 <div class="row   justify-content-center" >
 
