--- a/src/app/patient/components/patientdashboard/patientdashboard.component.html
+++ b/src/app/patient/components/patientdashboard/patientdashboard.component.html
@@ -2,7 +2,7 @@
     <div class="row mt-5">
         <div class="col-xl-6  ">
             <div class="shadow p-1">
-                <ngx-charts-bar-vertical-normalized [results]="productSalesMulti" [view]="view" [scheme]="colorScheme"
+                <ngx-charts-bar-vertical-normalized [results]="depEarned" [view]="view" [scheme]="colorScheme"
                     [schemeType]="schemeType" [gradient]="gradient" [xAxis]="xAxis" [yAxis]="yAxis" [legend]="legend"
                     [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
                     [yAxisLabel]="yAxisLabel" [legendTitle]="legendTitleMulti" [legendPosition]="legendPosition"
@@ -13,7 +13,7 @@
         </div>
         <div class="col-xl-6 cm ">
             <div class="shadow p-1">
-                <ngx-charts-line-chart [results]="productSalesMulti" [view]="view" [scheme]="colorScheme"
+                <ngx-charts-line-chart [results]="depEarned" [view]="view" [scheme]="colorScheme"
                     [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
                     [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
                     [timeline]="timeline">
@@ -22,7 +22,7 @@
         </div>
         <div class="col-xl-6 cmm ">
             <div class="shadow p-1">
-                <ngx-charts-pie-chart [results]="productSales" [view]="view" [scheme]="colorScheme"
+                <ngx-charts-pie-chart [results]="depReservations" [view]="view" [scheme]="colorScheme"
                     [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
                     [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
                     (deactivate)="onDeactivate($event)">
