--- a/src/styles.scss
+++ b/src/styles.scss
@@ -244,3 +244,14 @@ body {
     .booknowbtn:hover {
         background: #1c84e3;
     }
+//////////////////////////////
+    .advanced-pie-legend .total-value {
+        margin-bottom: 10px;
+    }
+
+    .advanced-pie-legend .legend-items-container .legend-items .legend-item .item-value {
+        margin-top: 0px !important;
+        margin-bottom: 11px;
+    }
+
+
