--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -27,4 +27,9 @@
     -moz-border-radius: 50px;
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
+    width: 100%;
+    height: 10%;
+}
+.appointments-container{
+    background-color: white;
 }
