--- a/src/app/patient/components/patientdashboard/patientdashboard.component.html
+++ b/src/app/patient/components/patientdashboard/patientdashboard.component.html
@@ -1,4 +1,8 @@
-<div class="container-fluid mt-5">
+<div class="spinnerCustomStyle " *ngIf="!checkLoader">
+    <mat-spinner  ></mat-spinner>
+</div>
+
+<div class="container-fluid mt-5" *ngIf="checkLoader">
     <div class="row mt-5">
         <div class="col-xl-6  ">
             <div class="shadow p-1">
