--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -113,6 +113,39 @@
     </div>
 
   </div>
+  <div class="row d-flex justify-content-between mt-4 ">
+
+    <div class="col-md-5 appointments-container rounded-3 mt-2">
+      <ngx-charts-bar-vertical [results]="deptFrequency" [view]="viewVertical" [scheme]="colorScheme"  [gradient]="gradient" [xAxis]="xAxis" [yAxis]="yAxis" [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
+      [xAxisLabel]="xAxisLabelDepartment" [yAxisLabel]="yAxisLabelDepartment" [legendTitle]="legendTitleDepartment" [animations]="animations" [showGridLines]="showGridLines" [trimXAxisTicks]="trimXAxisTicks" [trimYAxisTicks]="trimYAxisTicks"
+      [rotateXAxisTicks]="rotateXAxisTicks" [maxXAxisTickLength]="maxXAxisTickLength" [maxYAxisTickLength]="maxYAxisTickLength" [xAxisTickFormatting]="formatString" [yAxisTickFormatting]="formatNumber" [yAxisTicks]="yAxisTicks" [showDataLabel]="showDataLabel"
+      [barPadding]="barPadding" [tooltipDisabled]="tooltipDisabled" [roundEdges]="roundEdges">
+      </ngx-charts-bar-vertical>
+    </div>
+    <div class="col-md-5 appointments-container rounded-3 mt-2">
+      <!-- <ngx-charts-bar-vertical [results]="doctorFrequency" [view]="viewVertical" [scheme]="colorScheme"  [gradient]="gradient" [xAxis]="xAxis" [yAxis]="yAxis" [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
+      [xAxisLabel]="xAxisLabelDoctors" [yAxisLabel]="yAxisLabelDoctors" [legendTitle]="legendTitleDoctors" [animations]="animations" [showGridLines]="showGridLines" [trimXAxisTicks]="trimXAxisTicks" [trimYAxisTicks]="trimYAxisTicks"
+      [rotateXAxisTicks]="rotateXAxisTicks" [maxXAxisTickLength]="maxXAxisTickLength" [maxYAxisTickLength]="maxYAxisTickLength" [xAxisTickFormatting]="formatString" [yAxisTickFormatting]="formatNumber" [yAxisTicks]="yAxisTicks" [showDataLabel]="showDataLabel"
+      [barPadding]="barPadding" [tooltipDisabled]="tooltipDisabled" [roundEdges]="roundEdges">
+     </ngx-charts-bar-vertical> -->
+     <ngx-charts-bar-horizontal
+     [view]="viewVertical"
+     [scheme]="colorScheme"
+     [results]="doctorFrequency"
+     [gradient]="gradient"
+     [xAxis]="showXAxisLabel"
+     [yAxis]="showYAxisLabel"
+     [legend]="legend"
+     [showXAxisLabel]="showXAxisLabel"
+     [showYAxisLabel]="showYAxisLabel"
+     [xAxisLabel]="xAxisLabelDoctors"
+     [yAxisLabel]="yAxisLabelDoctors"
+     (select)="onSelect($event)"
+   
+     >
+   </ngx-charts-bar-horizontal>
+    </div>
+  </div>
   <div class="row mt-4">
     <div class="col-md-8  ">
       <div class="row me-1 appointments-container rounded-3">
@@ -298,3 +331,21 @@
   >
   </ngx-charts-number-card>
 </div> -->
+
+
+<!-- <ngx-charts-bar-horizontal
+  [view]="view"
+  [scheme]="colorScheme"
+  [results]="deptFrequency"
+  [gradient]="gradient"
+  [xAxis]="showXAxisLabel"
+  [yAxis]="showYAxisLabel"
+  [legend]="legend"
+  [showXAxisLabel]="showXAxisLabel"
+  [showYAxisLabel]="showYAxisLabel"
+  [xAxisLabel]="xAxisLabelDepartment"
+  [yAxisLabel]="yAxisLabelDepartment"
+  (select)="onSelect($event)"
+
+  >
+</ngx-charts-bar-horizontal> -->
