--- a/src/app/components/availabletimes/availabletimes.component.html
+++ b/src/app/components/availabletimes/availabletimes.component.html
@@ -2,7 +2,7 @@
     <mat-spinner  ></mat-spinner>
 </div>
 <section id="doctors" class="doctors" *ngIf="isLoaded" style="background-color: rgba(255, 255, 255, 0.79);">
-<div class="row my-4   justify-content-center" *ngFor="let doc of DoctorsTimeSlots">
+<div class="row my-4   justify-content-center" *ngFor="let doc of pagedItems">
 
         <div class="member card col-md-8" >
             <div class=" d-flex align-items-start justify-content-between" >
@@ -22,6 +22,11 @@
         </div>
         
     
-
+        <div class="pagination d-flex justify-content-center  align-items-center py-4">
+            <button class="pagination-item text-center" *ngFor="let page of length" [class.active]="currentPage === page"
+              (click)="setPage(page)">
+              {{ page }}
+            </button>
+          </div>
 </section>
 
