--- a/src/app/doctor/components/doctordashboard/doctordashboard.component.html
+++ b/src/app/doctor/components/doctordashboard/doctordashboard.component.html
@@ -1,42 +1,66 @@
- <div class="container-fluid mt-5">
+<div class="container-fluid mt-5">
+    <!-- <div class="row d-flex justify-content-center">
+        <select class="form-select col-md-3 w-25" aria-label="Default select example">
+                <option>Day
+                </option>
+                <option selected>Week
+                </option>
+                <option>Month
+                </option>
+            </select>
+    </div> -->
+
+
     <div class="row mt-5">
         <div class="col-xl-6  ">
-            <div >
-                <ngx-charts-bar-vertical-normalized   [results]="productSalesMulti" [view]="view" [scheme]="colorScheme"
-                [schemeType]="schemeType" [gradient]="gradient" [xAxis]="xAxis" [yAxis]="yAxis" [legend]="legend"
-                [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
-                [yAxisLabel]="yAxisLabel" [legendTitle]="legendTitleMulti" [legendPosition]="legendPosition"
-                [animations]="animations" [showGridLines]="showGridLines" [barPadding]="barPadding"
-                [tooltipDisabled]="tooltipDisabled">
-            </ngx-charts-bar-vertical-normalized>
-            </div> 
+            <div class="shadow ">
+                <h3 class="text-light bg-success p-1">Week Reservations</h3>
+                <ngx-charts-linear-gauge [view]="view" [scheme]="colorScheme" [value]="value" [previousValue]="previousValue" (select)="onSelect($event)" [units]="units">
+                </ngx-charts-linear-gauge>
+            </div>
         </div>
-        <div class="col-xl-6 cm" >
-            <div >
-                <ngx-charts-line-chart  [results]="productSalesMulti" [view]="view" [scheme]="colorScheme" [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
-                [timeline]="timeline">
-            </ngx-charts-line-chart>
-            </div> 
+        <div class="col-xl-6 cm">
+            <div class="shadow">
+                <h3 class="text-light bg-success p-1">Week Incomes</h3>
+                <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="doctorIncomes" [gradient]=" gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel " [xAxisLabel]="xAxisLabel "
+                    [yAxisLabel]="yAxisLabel " (select)="onSelect($event) ">
+                </ngx-charts-bar-vertical>
+            </div>
         </div>
-        <div class="col-xl-6 cmm">
-            <ngx-charts-pie-chart [results]="productSales" [view]="view" [scheme]="colorScheme" [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
-            (deactivate)="onDeactivate($event)">
-        </ngx-charts-pie-chart>
+        <div class="col-xl-6 cmm ">
+            <div class="shadow ">
+                <h3 class="text-light bg-success p-1 ">Avg Visits by Gender</h3>
+                <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="patientGenders" [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
+                    (deactivate)="onDeactivate($event)">
+                </ngx-charts-pie-chart>
+            </div>
         </div>
-    </div>
- </div>
-  
+        <div class="col-xl-6 cmm ">
+            <div class="shadow ">
+                <h3 class="text-light bg-success p-1 ">Day Reservations</h3>
+                <ngx-charts-bar-vertical-2d [view]="view " [scheme]="colorScheme " [results]="timeSlots " [gradient]="gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel
+                    " [xAxisLabel]="xAxisLabel " yAxisLabel="Reservations " [legendTitle]="legendTitle " (select)="onSelect($event) " (activate)="onActivate($event) " (deactivate)="onDeactivate($event) ">
+                </ngx-charts-bar-vertical-2d>
+            </div>
+        </div>
 
-<!-- <ngx-charts-bar-vertical-normalized class="w-100 bg-primary m-5"  [results]="productSalesMulti" [view]="view"
-    [scheme]="colorScheme" [schemeType]="schemeType" [gradient]="gradient" [xAxis]="xAxis" [yAxis]="yAxis"
-    [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
-    [yAxisLabel]="yAxisLabel" [legendTitle]="legendTitleMulti" [legendPosition]="legendPosition"
-    [animations]="animations" [showGridLines]="showGridLines" [barPadding]="barPadding"
-    [tooltipDisabled]="tooltipDisabled">
+
+    </div>
+
+</div>
+
+
+<!-- <ngx-charts-bar-vertical-normalized class="w-100 bg-primary m-5 "  [results]="productSalesMulti " [view]="view "
+    [scheme]="colorScheme " [schemeType]="schemeType " [gradient]="gradient " [xAxis]="xAxis " [yAxis]="yAxis "
+    [legend]="legend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel " [xAxisLabel]="xAxisLabel "
+    [yAxisLabel]="yAxisLabel " [legendTitle]="legendTitleMulti " [legendPosition]="legendPosition "
+    [animations]="animations " [showGridLines]="showGridLines " [barPadding]="barPadding "
+    [tooltipDisabled]="tooltipDisabled ">
 </ngx-charts-bar-vertical-normalized>
 
- <div  style="margin-top: 100px;" >
-    <ngx-charts-line-chart class="w-100 m-5"[results]="productSalesMulti" [view]="view" [scheme]="colorScheme" [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
-                [timeline]="timeline">
+ <div  style="margin-top: 100px; " >
+    <ngx-charts-line-chart class="w-100 m-5 "[results]="productSalesMulti " [view]="view " [scheme]="colorScheme " [legend]="legend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel " [xAxis]="xAxis " [yAxis]="yAxis
+                    " [xAxisLabel]="xAxisLabel " [yAxisLabel]="yAxisLabel "
+                [timeline]="timeline ">
             </ngx-charts-line-chart>
 </div>  -->
