--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -99,7 +99,7 @@
                   <p class="text-muted "> Total Bookings</p>
                 </div>
                 <div class="col-md-12 ">
-                  <p class="fw-bold h4"> 2040</p>
+                  <p class="fw-bold h4"> {{usersCount?.numberOfBookings}}</p>
                 </div>
               </div>
             </div>
