--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,4 +1,8 @@
-<div class="container my-5  py-2 px-4 bg-light">
+<div class="spinnerCustomStyle " *ngIf="!checkLoader">
+  <mat-spinner  ></mat-spinner>
+</div>
+
+<div class="container-fluid my-5  py-2 px-5 bg-light"  *ngIf="checkLoader">
   <div class="row  py-3 mt-5 icon-container">
     <div class="col-md-12  d-flex justify-content-center">
       <div class="row d-flex justify-content-center" >
