--- a/src/app/admin/view-users/view-users.component.html
+++ b/src/app/admin/view-users/view-users.component.html
@@ -24,7 +24,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let user of usersArray ">
+                <tr *ngFor="let user of pagedItems ">
                     <th scope="row ">{{user.name}}</th>
                     <td>{{user.email}}</td>
                     <td>{{user.gender}}</td>
@@ -36,6 +36,14 @@
             </tbody>
         </table>
     </div>
+
+    <div class="pagination d-flex justify-content-center  align-items-center py-4">
+        <button class="pagination-item text-center" *ngFor="let page of length" [class.active]="currentPage === page"
+          (click)="setPage(page)">
+          {{ page }}
+        </button>
+      </div>
+
      <div class="container">
         <div class="row d-flex justify-content-center">
             <div class=" d-flex justify-content-center col-md-6">
