--- a/src/app/doctor/components/doctordashboard/doctordashboard.component.html
+++ b/src/app/doctor/components/doctordashboard/doctordashboard.component.html
@@ -1,66 +1,71 @@
-<div class="container-fluid mt-5">
-    <!-- <div class="row d-flex justify-content-center">
-        <select class="form-select col-md-3 w-25" aria-label="Default select example">
-                <option>Day
-                </option>
-                <option selected>Week
-                </option>
-                <option>Month
-                </option>
-            </select>
-    </div> -->
-
-
-    <div class="row mt-5">
-        <div class="col-xl-6  ">
-            <div class="shadow ">
-                <h3 class="text-light bg-success p-1">Week Reservations</h3>
-                <ngx-charts-linear-gauge [view]="view" [scheme]="colorScheme" [value]="value" [previousValue]="previousValue" (select)="onSelect($event)" [units]="units">
-                </ngx-charts-linear-gauge>
-            </div>
-        </div>
-        <div class="col-xl-6 cm">
-            <div class="shadow">
-                <h3 class="text-light bg-success p-1">Week Incomes</h3>
-                <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="doctorIncomes" [gradient]=" gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel " [xAxisLabel]="xAxisLabel "
-                    [yAxisLabel]="yAxisLabel " (select)="onSelect($event) ">
-                </ngx-charts-bar-vertical>
-            </div>
-        </div>
-        <div class="col-xl-6 cmm ">
-            <div class="shadow ">
-                <h3 class="text-light bg-success p-1 ">Avg Visits by Gender</h3>
-                <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="patientGenders" [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
-                    (deactivate)="onDeactivate($event)">
-                </ngx-charts-pie-chart>
-            </div>
-        </div>
-        <div class="col-xl-6 cmm ">
-            <div class="shadow ">
-                <h3 class="text-light bg-success p-1 ">Day Reservations</h3>
-                <ngx-charts-bar-vertical-2d [view]="view " [scheme]="colorScheme " [results]="timeSlots " [gradient]="gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel
-                    " [xAxisLabel]="xAxisLabel " yAxisLabel="Reservations " [legendTitle]="legendTitle " (select)="onSelect($event) " (activate)="onActivate($event) " (deactivate)="onDeactivate($event) ">
-                </ngx-charts-bar-vertical-2d>
-            </div>
-        </div>
-
-
-    </div>
-
+<div class="spinnerCustomStyle " *ngIf="!checkLoader">
+    <mat-spinner></mat-spinner>
 </div>
 
+<div class="container-fluid mt-5" *ngIf="checkLoader">
 
-<!-- <ngx-charts-bar-vertical-normalized class="w-100 bg-primary m-5 "  [results]="productSalesMulti " [view]="view "
-    [scheme]="colorScheme " [schemeType]="schemeType " [gradient]="gradient " [xAxis]="xAxis " [yAxis]="yAxis "
-    [legend]="legend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel " [xAxisLabel]="xAxisLabel "
-    [yAxisLabel]="yAxisLabel " [legendTitle]="legendTitleMulti " [legendPosition]="legendPosition "
-    [animations]="animations " [showGridLines]="showGridLines " [barPadding]="barPadding "
-    [tooltipDisabled]="tooltipDisabled ">
-</ngx-charts-bar-vertical-normalized>
+    <div class="row my-3 mx-1">
+        <div class="col-xl-6  ">
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img [src]="doctorInfo.imageUrl" class="img-fluid rounded-start" alt="doctorImage">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body text-primary">
+                            <h1 class="card-title"><i class="fa-solid fa-user"></i> {{doctorInfo.name}}</h1>
+                            <h1 class="card-title"><i class="fa-solid fa-phone"></i> {{doctorInfo.mobilePhone}}</h1>
+                            <h5 class="card-text d-inline"><i class="fa-solid fa-circle-dot mx-1"></i>{{doctorInfo.specification}}</h5>
+                            <h5 class="card-text d-inline mx-5"><i class="fa-solid fa-circle-dot mx-1"></i>{{doctorInfo.role}}</h5>
+                            <h5 *ngIf="doctorRating" class="card-text d-inline mx-3"><i class="fa-solid fa-circle-dot mx-1"></i><i class="bi bi-star-fill  text-warning me-1" *ngFor="let star of doctorRating"></i></h5>
 
- <div  style="margin-top: 100px; " >
-    <ngx-charts-line-chart class="w-100 m-5 "[results]="productSalesMulti " [view]="view " [scheme]="colorScheme " [legend]="legend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel " [xAxis]="xAxis " [yAxis]="yAxis
-                    " [xAxisLabel]="xAxisLabel " [yAxisLabel]="yAxisLabel "
-                [timeline]="timeline ">
-            </ngx-charts-line-chart>
-</div>  -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-xl-6  ">
+                <div class="shadow ">
+                    <h3 class="text-light bg-primary p-1">Total Reservations</h3>
+                    <ngx-charts-linear-gauge [view]="view" [scheme]="colorScheme" [value]="reservations" [previousValue]="maxReservations" (select)="onSelect($event)" [units]="units">
+                    </ngx-charts-linear-gauge>
+                </div>
+            </div>
+            <div *ngIf="timeSlots" class="col-xl-6 cm ">
+                <div class="shadow ">
+
+                    <h3 class="text-light bg-primary p-1 ">Reservations</h3>
+                    <span class="d-none">{{timeSlots[0]?.name}}</span>
+                    <ngx-charts-bar-vertical-2d [view]="view " [scheme]="colorScheme " [results]="timeSlots " [gradient]="gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel
+                    " [xAxisLabel]="xAxisLabel " yAxisLabel="Reservations " [legendTitle]="legendTitle " (select)="onSelect($event) " (activate)="onActivate($event) " (deactivate)="onDeactivate($event) ">
+                    </ngx-charts-bar-vertical-2d>
+                </div>
+            </div>
+            <div class="col-xl-6 cmm ">
+                <div class="shadow ">
+                    <h3 class="text-light bg-primary p-1 ">Avg Visits by Gender</h3>
+                    <span class="d-none">{{patientGenders[0].name}}</span>
+
+                    <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="patientGenders" [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
+                        (deactivate)="onDeactivate($event)">
+                    </ngx-charts-pie-chart>
+                </div>
+            </div>
+
+            <div class="col-xl-6 cmm">
+                <div class="shadow">
+                    <h3 class="text-light bg-primary p-1"> Incomes</h3>
+                    <span class="d-none">{{doctorIncomes[0].name}}</span>
+                    <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="doctorIncomes" [gradient]=" gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel " [xAxisLabel]="xAxisLabel "
+                        [yAxisLabel]="yAxisLabel " (select)="onSelect($event) ">
+                    </ngx-charts-bar-vertical>
+                </div>
+            </div>
+
+
+        </div>
+
+    </div>
