--- a/src/app/patient/components/patientdashboard/patientdashboard.component.html
+++ b/src/app/patient/components/patientdashboard/patientdashboard.component.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-xl-6 cm ">
             <div class="shadow px-1 pt-3">
-                <h2>Last 3 Months Paid per Department</h2>
+                <h2>Last 3 Months Reservations per Department</h2>
                 <ngx-charts-line-chart [results]="depEarned" [view]="view" [scheme]="colorScheme"
                     [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
                     [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
