--- a/src/app/patient/components/patientdashboard/patientdashboard.component.html
+++ b/src/app/patient/components/patientdashboard/patientdashboard.component.html
@@ -6,7 +6,7 @@
     <div class="row mt-5">
         <div class="col-xl-6  ">
             <div class="shadow px-1 pt-3">
-                <h2>Last 3 Months Paid per Department</h2>
+                <h2>{{"Last3MonthsReservationsperDepartment" | translate}}</h2>
                 <ngx-charts-bar-vertical-2d [results]="depEarned" [view]="view" [scheme]="colorScheme" [schemeType]="schemeType" [gradient]="gradient" [xAxis]="xAxis" [yAxis]="yAxis" [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
                 [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [legendTitle]="legendTitleMulti" [legendPosition]="legendPosition" [animations]="animations" [showGridLines]="showGridLines" [barPadding]="barPadding" [tooltipDisabled]="tooltipDisabled"></ngx-charts-bar-vertical-2d>
 <!--        
@@ -21,7 +21,7 @@
         </div>
         <div class="col-xl-6 cm ">
             <div class="shadow px-1 pt-3">
-                <h2>Last 3 Months Reservations per Department</h2>
+                <h2>{{"Last3MonthsReservationsperDepartment" | translate}}</h2>
                 <ngx-charts-line-chart [results]="depEarned" [view]="view" [scheme]="colorScheme"
                     [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
                     [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
@@ -31,7 +31,7 @@
         </div>
         <div class="col-xl-6 cmm ">
             <div class="shadow px-1 pt-3">
-                <h2>Reservations number per Department</h2>
+                <h2>{{"ReservationsnumberperDepartment" | translate}}</h2>
                 <ngx-charts-pie-chart [results]="depReservations" [view]="view" [scheme]="colorScheme"
                     [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels"
                     [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
@@ -41,7 +41,7 @@
         </div>
         <div class="col-xl-6 cmm ">
             <div class="shadow px-1 pt-3">
-                <h2>Reservations number per Doctor</h2> 
+                <h2>{{"ReservationsnumberperDoctor" | translate}}</h2>
                 <ngx-charts-number-card [results]="docNums" [view]="view" [scheme]="colorScheme2" [cardColor]="cardColor" (select)="onSelect($event)">
                 </ngx-charts-number-card>
             </div>
