--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -1,27 +1,30 @@
-*{
+* {
     box-sizing: border-box;
 }
-.icon-container{
-    border-radius:  20px;
-    -webkit-border-radius:20px;
-    -moz-border-radius:20px;
-    -ms-border-radius:20px;
-    -o-border-radius:20px;
+
+.icon-container {
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
     background-color: white;
 }
-.graph-container{
-    border-radius:  20px;
-    -webkit-border-radius:20px;
-    -moz-border-radius:20px;
-    -ms-border-radius:20px;
-    -o-border-radius:20px;
+
+.graph-container {
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
     background-color: white;
 }
-.reviews-container
-{
+
+.reviews-container {
     background-color: white;
 }
-.img-rounded{
+
+.img-rounded {
     border-radius: 50px;
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
@@ -30,6 +33,7 @@
     width: 100%;
     height: 10%;
 }
-.appointments-container{
+
+.appointments-container {
     background-color: white;
 }
