finishing send notification process

--- a/src/app/doctor/components/timeslotappointment/timeslotappointment.component.html
+++ b/src/app/doctor/components/timeslotappointment/timeslotappointment.component.html
@@ -21,7 +21,7 @@
                             <p class="bi bi-telephone">{{Bookingitem.mobilePhone}}</p>
                             <p class="bi bi-envelope">{{Bookingitem.email}}</p>
                         </div>
-                        <button class="btn btn-danger mt-4 " (click)="goToPatient(Bookingitem._id)">Finish appointment</button>
+                        <button class="btn btn-danger mt-4 " (click)="goToPatient(Bookingitem._id,Bookingitem.bookingId)">Finish appointment</button>
                     </div>
                     
                    
