geting instructions from doctor

--- a/src/app/components/selecteddoctors/selecteddoctors.component.html
+++ b/src/app/components/selecteddoctors/selecteddoctors.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row my-4   justify-content-center" *ngFor="let doc of pagedItems">
 
-        <div class="member card col-md-8" (click)="goToDoctorDetails(doc.doctorId)">
+        <div class="member card col-md-8" >
             <div class=" d-flex align-items-start " >
             <div class="pic"><img src="assets/img/doctors/doctors-1.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
