--- a/src/app/components/about-doctor/about-doctor.component.html
+++ b/src/app/components/about-doctor/about-doctor.component.html
@@ -30,7 +30,7 @@
             
         </div>
 
-        <div class="member card col-8 mt-3" >
+        <div class="member card col-8 mt-3" *ngIf="isEnded">
             
             <div class="member-info row justify-content-center" >
                 <h4 class="col-lg-3 col-7">Your opinion matters to us!</h4>
@@ -48,14 +48,21 @@
 
         
 
-        <div class="member card col-8 my-1" >
+        <div class="member card col-8 my-1" *ngIf="isEnded" style="min-height:300px ;">
             
             <div class="member-info row justify-content-center">
-                <h4 class="col-lg-3 col-7" >Notification from doctor</h4>
-                
+                <h4 class="col-lg-3 col-8" >Prescription from doctor</h4>
+                <ul  class="col-10 mt-3"><li style="font-size: 17px;">{{notification}}</li></ul>
             </div>
         
       
+            
+        </div>
+
+        <div class=" my-1" *ngIf="!isEnded" class=" col-10 my-2 alert alert-danger text-center">
+            
+            your appointment not finished yet!
+    
             
         </div>
 </div>
