--- a/src/app/components/allappointments/allappointments.component.html
+++ b/src/app/components/allappointments/allappointments.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="row my-4   justify-content-center" >
                 
-                <div class="member card col-9 my-3 " *ngFor="let Bookingitem of bookingInfo" (click)="goToDoctorDetails(Bookingitem.doctorId)" >
+                <div class="member card col-9 my-3 " *ngFor="let Bookingitem of bookingInfo" (click)="goToDoctorDetails(Bookingitem.doctorId,Bookingitem.bookingId)" >
                     <div class=" d-flex align-items-start " >
                     <div class="pic"><img src="assets/img/doctors/doctors-1.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
